Bug 11296 - libarchive detection broken
Summary: libarchive detection broken
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.2.2
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.4
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-28 14:17 UTC by Björn Jacke
Modified: 2015-12-17 10:05 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2015-05-28 14:17:53 UTC
the detection of libarchive is broken. --with-libarchive abort the build even with libarchive installed. Patch to follow ...
Comment 1 David Disseldorp 2015-05-28 15:04:56 UTC
Which platform are you on? It works for me on openSUSE 13.2 / SLES12 with and without the --with-libarchive configure flag (where libarchive is autodetected).
Comment 2 David Disseldorp 2015-05-28 15:07:39 UTC
(In reply to David Disseldorp from comment #1)
...--without-libarchive works fine for me too.
Comment 3 Björn Jacke 2015-05-28 15:36:05 UTC
opensuse factory actually. Unfortunately the previous waf functions was complelety quiet about why the previous check function failed. The new patch is on samba-technical. It also removes the pkg-config requirement while keeping the check for archive_read_support_filter_all, which was the initial reason for the introduction of the pkg-config based version check.
Comment 4 Björn Jacke 2015-05-28 17:06:12 UTC
David: with --bundled-libraries=ALL you can reproduce the error. The conf.CHECK_BUNDLED_SYSTEM is only suitable for libraries that we actually bundle. I agree, those functions don't always do what one might expect and their names don't help a lot either. Time for a new build system ;-)
Comment 5 Björn Jacke 2015-12-03 20:23:18 UTC
this is fixed in master with c118fbc680f84622c12997cf347f3194d532ddbc
Comment 6 Karolin Seeger 2015-12-04 08:07:54 UTC
(In reply to Björn Jacke from comment #5)
As this seems to be an issues since 4.2, shouldn't we backport the patch?
Comment 7 Björn Jacke 2015-12-04 08:25:49 UTC
sure, if you want, you can cherry-pick it. As the reported issue strictly speaking is just poping up with --bundled-libraries=ALL it doesn't look very urgent to me. c118fbc680 also adds support for older versions of libarchive, which might change package dependencies, this *might* also speak against a backport.